<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:gravity="center"
    android:background="@drawable/signin_background"
    android:backgroundTint="#CCFFFFFF"
    android:backgroundTintMode="src_over"
    tools:context=".SigninActivity">

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/username_placeholder"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameText"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/itsc_placeholder"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/emailEndText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/emailText"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:text="@string/email_end_text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/verifyCodeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailText"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/verify_code_placeholder"
        android:inputType="number" />

    <Button
        android:id="@+id/verifyCodeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verifyCodeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:onClick="getVerifyCode"
        android:text="@string/get_verify_code_btn" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in_btn"
        android:layout_below="@+id/verifyCodeButton"
        android:layout_centerHorizontal="true"
        android:onClick="signIn"
        android:enabled="false"/>

</RelativeLayout>